fixed logo on small devices

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -232,10 +232,13 @@ menu h1 {
   z-index: 100;
   position: absolute;
   height: 44px;
+  background: #EEBD54 url('../img/logo-4k.png') no-repeat left center;
+  text-align: center;
 }
 #word-bar-handle {
   margin: auto;
   cursor: pointer;
+  text-align: center;
 }
 #word-bar menu {
   float: right;
@@ -367,7 +370,6 @@ footer {
     width: 100%;
     display: block;
     z-index: 100;
-    background: #EEBD54 url('../img/logo-4k.png') no-repeat left center;
   }
   footer {
    display: none;
